#96 Migrate superfly to the latest JDK 17